WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269745
[WebGPU] TextureView should hold a Ref<Texture> instead of a Texture&
https://bugs.webkit.org/show_bug.cgi?id=269745
Summary
[WebGPU] TextureView should hold a Ref<Texture> instead of a Texture&
Mike Wyrzykowski
Reported
2024-02-19 13:45:39 PST
[WebGPU] TextureView should hold a Ref<Texture> instead of a Texture&
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-19 13:45:57 PST
<
rdar://problem/123264512
>
Mike Wyrzykowski
Comment 2
2024-02-19 13:49:30 PST
radar://123224537
Radar WebKit Bug Importer
Comment 3
2024-02-19 13:49:38 PST
<
rdar://problem/123264879
>
Mike Wyrzykowski
Comment 4
2024-02-19 13:54:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24773
EWS
Comment 5
2024-02-19 23:57:52 PST
Committed
275028@main
(9a7ee2735d19): <
https://commits.webkit.org/275028@main
> Reviewed commits have been landed. Closing PR #24773 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug