[WebGPU] TextureView should hold a Ref<Texture> instead of a Texture& https://bugs.webkit.org/show_bug.cgi?id=269745 <radar://123224537>

Reviewed by Dan Glastonbury.

We don't want the underlying Texture object to have its
lifetime end while any derived TextureView instances are still
alive.

Hold a strong reference to the Texture instead of a raw C++ reference.

* Source/WebGPU/WebGPU/TextureView.h:
* Source/WebGPU/WebGPU/TextureView.mm:
(WebGPU::TextureView::parentTexture const):
(WebGPU::TextureView::previouslyCleared const):
(WebGPU::TextureView::setPreviouslyCleared):
(WebGPU::TextureView::width const):
(WebGPU::TextureView::height const):
(WebGPU::TextureView::depthOrArrayLayers const):
(WebGPU::TextureView::usage const):
(WebGPU::TextureView::sampleCount const):
(WebGPU::TextureView::parentFormat const):
(WebGPU::TextureView::parentMipLevelCount const):
(WebGPU::TextureView::isDestroyed const):

Canonical link: https://commits.webkit.org/275028@main